feat(T012/workflow): coder — update 31 file(s)
workflow step: coder
state: IMPLEMENTATION_REVIEW_NEEDED

Files:
- backend/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
- backend/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
- backend/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
- backend/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
- backend/target/surefire-reports/TEST-com.timizer.backend.cra.CraDayEntryTest.xml
- backend/target/surefire-reports/TEST-com.timizer.backend.cra.CraDayEntryUpdateWorkValueTest.xml
- backend/target/surefire-reports/TEST-com.timizer.backend.cra.CraTotalCalculationServiceTest.xml
- backend/target/surefire-reports/TEST-com.timizer.backend.cra.MonthlyCraCreationServiceTest.xml
- backend/target/surefire-reports/TEST-com.timizer.backend.cra.MonthlyCraReportPersistenceTest.xml
- backend/target/surefire-reports/TEST-com.timizer.backend.cra.MonthlyCraReportRepositoryTest.xml
- … and 21 more

refs T012